--- a/portfolio_web/index.html
+++ b/portfolio_web/index.html
@@ -2,18 +2,30 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hamsof</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo"></div>
+            <div class="logo">hamsof</div>
             <nav>
-                <a href="#">Home</a><a href="#">Contact</a><a href="#">Projects</a>
+                <a href="#">Home</a><a href="#">Contact</a><button><a href="#">Projects</a></button>
             </nav>
         </div>
     </header>
-    <main>
-        
+    <main>  
+        <section class="front">
+            <div class="content_1">
+                Its </br> hafiz abdulmanan  
+            </div>
+            <div class="animation">
+            <div class="content_2">
+            </div>
+            <span class="cursor"></span>
+        </div>
+        </section> 
     </main>
+
+    <script src="portfolio.js"></script>
 </body>
 </html>
